# repelling-points-on-circle

./: CMakeLists.txt  LICENSE  README.md  helpers.cpp  helpers.hpp  main.cpp  makefile  spin.cpp
include/: constants.hpp  spin.hpp
src/: helpers.cpp  main.cpp  spin.cpp
